# kalshi-polymarket-arb

./: .gitignore  KALSHI_AUTH_SETUP.md  README.md  config_paths.py  pyproject.toml
orderbook/Kalshi/: kalshi_orderbook.py  kalshi_websocket_debugger.py
orderbook/Polymarket/: polymarket_orderbook.py  polymarket_raw_logger.py  polymarket_websocket_debugger.py
orderbook/Pump.fun/: pumpfun_websocket_debugger.py
orderbook/Pump.fun/experimental/: README.md  test_bonding_curve_formula.py
orderbook/Utility/: plot_orderbook.py  process_orderbook_data.py  read_processed_orderbook.py
realtime/: arbitrage_checker.py  kalshi_realtime_orderbook.py  polymarket_realtime_orderbook.py
